# Food-Palette

./: README.md
api_server/: .gitignore  Cargo.toml
api_server/src/: error.rs  image_analyzer.rs  main.rs  pixel_data.rs  rgb_ext.rs  web_schema.rs
front_end/: FR-Result.html  LogIn.html  MenuRecommendation.html  MenuRecommendation18.html  Mypage.html  SignUp.html  SignUp_result.html  index.html  main.html  photo_upload.html
front_end/assets/css/: main.css
front_end/images/: 굴국밥.jfif  떡국.jfif  재첩국.jfif
front_end/src/: F-RResult.js  ajax.js  ajax_upload.js  images.json  menuRecom.js
