[package]
name = "api_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "*", features = [ "runtime-async-std-rustls", "mysql" ]}
tide = "*"
http-types = "*"

async-std = { version = "*", features = ["attributes"] }
serde = { version = "*", features = ["derive"] }

thiserror = "*"
image = "*"
uuid = { version = "*", features = ["v4"] }