[package]
name = "api_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-types = "*"

tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }

thiserror = "*"
image = "*"
uuid = { version = "*", features = ["v4"] }

tracing = "*"